--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,18 @@
 version: "3.5"
 
-x-defaults: &defaults
-  restart: always
-
 services:
-  service:
+  db:
     build:
       context: .
       dockerfile: ./Dockerfile
-    image: {{ docker_hub_username }}/{{ docker_hub_repo }}
+    networks:
+      - db
+    volumes:
+      - postgres_db:/var/lib/postgresql/data
+
+volumes:
+  postgres_db: {}
+
+networks:
+  db:
+    driver: bridge
